Added player speech
